# countsd

./: CMakeLists.txt  README.md  lab_5second.cpp  laba 1.1.cpp
1_semester/lab_2/: CMakeLists.txt  main.cpp
1_semester/lab_3/: main.cpp
1_semester/lab_4/: main.cpp
1_semester/lab_5/: CMakeLists.txt  main.cpp
1_semester/lab_6/: main.cpp  main_new.cpp
1_semester/lab_7/: CMakeLists.txt  main.cpp
1_semester/lab_8/: CMakeLists.txt  main.cpp
2_lab__3/: CMakeLists.txt  clock.cpp  clock.hpp  main.cpp
2_lab__3/include/: clock_lib.hpp
2_lab__3/src/: clock_lib.cpp
2_semester/2lab_1/: main.cpp
2_semester/2lab_2/: CMakeLists.txt  Clock.cpp  Clock.h  main.cpp
2_semester/2lab_3/: CMakeLists.txt  clock.cpp  clock.hpp  main.cpp
2_semester/2lab_3/include/: clock_lib.hpp
2_semester/2lab_3/src/: clock_lib.cpp
2_semester/2lab_4/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  person.cpp  person.h
2_semester/strings/: CMakeLists.txt  main.cpp
2lab_2/: CMakeLists.txt  Clock.cpp  Clock.h  main.cpp
lab_11/: main.cpp
lab_2/: main.cpp
lab_3/: main.cpp
lab_4/: main.cpp
lab_5/: main.cpp
lab_6/: CMakeLists.txt  main.cpp  main.cpp_1  main.cpp_2
lab_7/: CMakeLists.txt  main.cpp
lab_8/: CMakeLists.txt  main.cpp
